// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyLocalizationForm handles changes 1`] = `
Array [
  "spa",
  Array [
    Object {
      "translations": Object {
        "body": "translated body",
        "subject": "translated subject",
      },
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
    },
  ],
]
`;

exports[`KeyLocalizationForm removes translations 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header send_email"
      >
        <div
          class="title_container"
        >
          <div
            style="flex-grow: 1;"
          >
            <div
              class="title"
            >
              Send Email
            </div>
            <div
              class="subtitle"
            />
          </div>
          <div
            class="tabs"
          >
            <div
              class="tab "
              style="display: flex;"
            >
              <div>
                Body Translation
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="content"
      >
        <div>
          <div
            data-spec="translation-container"
          >
            <div
              class="translate_from"
              data-spec="text-to-translate"
            >
              New Sign Up
            </div>
          </div>
          <div
            class="ele"
          >
            <div
              class="wrapper normal"
            >
              <input
                data-testid="Subject"
                name="Subject"
                placeholder="Spanish Translation"
                value="hola"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="display: inline-flex; margin-left: 0px; margin-top: 0px;"
            >
              <div
                style="margin-bottom: 0px;"
              >
                Cancel
              </div>
            </div>
            <div
              class="btn primary  "
              style="display: inline-flex; margin-left: 10px; margin-top: 0px;"
            >
              <div
                style="margin-bottom: 0px;"
              >
                Ok
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`KeyLocalizationForm removes translations 2`] = `
Array [
  "spa",
  Array [
    Object {
      "translations": Object {},
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
    },
  ],
]
`;

exports[`KeyLocalizationForm renders send email 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header send_email"
      >
        <div
          class="title_container"
        >
          <div
            style="flex-grow: 1;"
          >
            <div
              class="title"
            >
              Send Email
            </div>
            <div
              class="subtitle"
            />
          </div>
          <div
            class="tabs"
          >
            <div
              class="tab "
              style="display: flex;"
            >
              <div>
                Body Translation
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="content"
      >
        <div>
          <div
            data-spec="translation-container"
          >
            <div
              class="translate_from"
              data-spec="text-to-translate"
            >
              New Sign Up
            </div>
          </div>
          <div
            class="ele"
          >
            <div
              class="wrapper normal"
            >
              <input
                data-testid="Subject"
                name="Subject"
                placeholder="Spanish Translation"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="display: inline-flex; margin-left: 0px; margin-top: 0px;"
            >
              <div
                style="margin-bottom: 0px;"
              >
                Cancel
              </div>
            </div>
            <div
              class="btn primary  "
              style="display: inline-flex; margin-left: 10px; margin-top: 0px;"
            >
              <div
                style="margin-bottom: 0px;"
              >
                Ok
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
